Am adaugat altceva

--- a/It 3.html
+++ b/It 3.html
@@ -113,7 +113,9 @@ console.log(x[t-1]+x[t-2]+x[t-3]);
 </script>
 -->
 
-
+<p>Codul asta e perfect</p>
+<p>Codul asta e perfect</p>
+<p> Exercitiul Nr. 13</p>
 <p> Exercitiul Nr. 13</p>
 <script>
 console.log("")
