--- a/Day 5.html
+++ b/Day 5.html
@@ -1,60 +1,15 @@
-<!--
 <p> Exercitiul Nr. 1</p>
 <script>
-console.log("")
-console.log("Exercitiul Nr. " + 1)
-var n = 10
-var r = 1
-var s = ""
-for(i = 1; i <= n; i++)
+var n = 3;
+for(var i = 1; i <= n; i++)
 {
-	t = i * i
-	s = i + "x" + i + "=" + t
-	console.log(s);
-}
-</script>
-
-
-<p> Exercitiul Nr. 2</p>
-<script>
-console.log("")
-console.log("Exercitiul Nr. " + 2)
-var n = 10
-for(i = 0; i < n; i++)
-{
-	if(i % 2 == 0)
+	for(var j = 1; j <=n; j++)
 	{
-		console.log("")
-	}
-	else
-	{
-		console.log(i)
+		var t = j + "x" + i + "=" + j * i;
+		console.log(t);
 	}
 }
 </script>
-
-
-
-<p> Exercitiul Nr. 3</p>
-<script>
-console.log("")
-console.log("Exercitiul Nr. " + 3)
-var n = 5
-var x = 'Mami!';
-var t = "a"
-var r = "i"
-for (i = 0; i <= n; i++)
-{
-	if (x[i] != t)
-	{	
-		if (x[i] != r)
- 		{
-		console.log(x[i])
-		}
-	}
-}
-</script>
-
 
 <p> Exercitiul Nr. 4</p>
 <script>
@@ -534,7 +489,7 @@ var f = function(x,y)
 f(0,1);
 </script>
 
--->
+
 
 <script>
 var char_position = function(c,s)
@@ -550,7 +505,7 @@ var char_position = function(c,s)
 console.log(char_position("j","hey joe"));
 console.log(char_position("x","hey joe"));
 </script>
-
+-->
 
 
 
