--- a/Sliding_puzzle(Day_10).html
+++ b/Sliding_puzzle(Day_10).html
@@ -4,32 +4,16 @@ var canvas = document.getElementById("myCanvas");
 var ctx = canvas.getContext("2d");
 ctx.font = "10px Monospace";
 ctx.beginPath();
-
 ctx.font = "30px Arial";
 
-
-
-
-var n = 4;
-for(var j = 0;j < n;j++)
+var numbers = [];
+for(var i = 1; i <= 15; i++)
 {
-	for(var i = 0; i < n; i++)
-	{
-		ctx.rect(20.5+55*i,20.5+55*j,50,50);
-		ctx.stroke();
-	}
+	numbers.push(i);
 }
 
-for(var j = 0;j < n;j++)
-{
-	for(var i = 0; i < n; i++)
-	{
-		ctx.fillText("1",35+55*i,55+55*j);
-		ctx.stroke();
-	}
-}
 
-var numbers = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15];
+
 var random = function()
 {
 	var a = Math.floor(Math.random()*(numbers.length));
@@ -37,9 +21,41 @@ var random = function()
 	numbers.splice(a,1);
 	return b;
 }
-for(var i = 0; i<15;i++)
+
+var screen = [];
+
+for(var j = 1;j <=4; j++)
 {
-	console.log(random());
+	var line = [];
+	for(var i = 1;i <= 4; i++)
+	{
+		var z = random() || 0;
+		line.push(z);
+	}
+	screen.push(line);
 }
+
+
+screen[3][3]=screen[1][1];
+screen[1][1]=0;
+
+var n = 4;
+for(var j = 0;j < n;j++)
+{
+	for(var i = 0; i < n; i++)
+	{
+		var z = screen[j][i];
+		if(z)
+		{
+			ctx.rect(20.5+55*i,20.5+55*j,50,50);
+			var t = (z >= 10 ? 10 : 0);
+			ctx.fillText(z,38-t+55*i,55+55*j);
+			ctx.stroke();
+		}
+	}
+}
+console.log(screen);
+
+console.log(undefined==null)
 
 </script>
